Se configuran los Cors en los controladores