@@ -49,7 +49,7 @@ public class SecurityConfig {
         // users
         .requestMatchers(HttpMethod.POST,"/api/users/register").permitAll() // registrarse
         .requestMatchers(HttpMethod.GET,"/api/users/{id}").hasAnyRole("USER", "ADMIN") // obtener user por id
-        .requestMatchers(HttpMethod.GET,"/api/users").hasRole("ADMIN") // obtener todos los users
+        .requestMatchers(HttpMethod.GET,"/api/users").permitAll() //.hasRole("ADMIN") // obtener todos los users
         .requestMatchers(HttpMethod.POST, "/api/users").hasRole("ADMIN") // crear users con role de admin
         .requestMatchers(HttpMethod.POST, "/api/users/refresh").hasAnyRole("USER", "ADMIN") // refrescar token
 
@@ -71,7 +71,7 @@ public class SecurityConfig {
         .addFilter(new JwtAuthenticationFilter(this.authenticationManager())) // configuración propia
         .addFilter(new JwtValidationFilter(this.authenticationManager())) // configuración propia
         .csrf(config -> config.disable())
-        .cors(cors -> cors.configurationSource(corsConfigurationSource())) // configurar el course
+        .cors(cors -> cors.configurationSource(corsConfigurationSource())) // configurar el cors
         .sessionManagement(management -> management.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
         .build();
     }
@@ -79,9 +79,9 @@ public class SecurityConfig {
     @Bean
     CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration config = new CorsConfiguration();
-        config.setAllowedOrigins(List.of("http://localhost:4200"));
+        config.setAllowedOriginPatterns(Arrays.asList("http://localhost:4200"));
         config.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE"));
-        config.setAllowedHeaders(Arrays.asList("Content-Type", "Authorization"));
+        config.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type"));
         config.setAllowCredentials(true);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
